Replaced jinput with lwjgl-glfw + GUI overhaul